[package]
name = "ldtk_rust"
version = "0.7.2"
authors = ["Blake Ellis <blake@colormaria.com>"]
edition = "2024"
license = "MIT"
description = "Use the LDtk 2D level editor to build games in Rust."
homepage = "https://github.com/estivate/ldtk_rust"
documentation = "https://docs.rs/ldtk_rust/"
repository = "https://github.com/estivate/ldtk_rust"
readme = "README.md"
keywords = ["ldtk", "game", "gamedev", "map-editor"]
categories = ["games", "game-development"]
build = "build.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0.12"

[dev-dependencies]
bevy = "0.16.0"


[features]
default = ["v-1-5-3"]
v-0-6-3 = []
v-0-6-4 = []
v-0-7-0 = []
v-0-8-1 = []
v-0-9-2 = []
v-0-9-3 = []
v-0-10-beta1 = []
v-0-10-beta2 = []
v-1-0-0 = []
v-1-1-0 = []
v-1-1-3 = []
v-1-5-3 = []
